# Spokify-Agentic-AI-Hackathon

./: .env-example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  requirements.txt  simple_master_agent.py  text_to_speach3.py
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: bdf04422c056_initial_migrations.py
backend/scripts/: Dockerfile.postgres  init_pg_cron.sh  postgresql.conf  set_cron_cleanup.sh
backend/src/auth/: dependencies.py  encrypt.py  hashing.py  jwt.py
backend/src/celery/: celery_app.py  tasks.py
backend/src/core/: settings.py
backend/src/db/: annotations.py  base.py  session.py
backend/src/middleware/: db_session.py  pagination.py  provider.py
backend/src/models/: __init__.py
backend/src/repositories/: a2a.py  agent.py  base.py  chat.py  files.py  flow.py  log.py  mcp.py  model_config.py  user.py
backend/src/routes/: api.py  websocket.py
backend/src/schemas/: base.py
backend/src/utils/: constants.py  db_initial_healthcheck.py  enums.py  exceptions.py  filters.py  helpers.py  jobs.py  lookup_a2a_agent.py  lookup_mcp_server.py  message_handler_validator.py  pagination.py  setup_logger.py  validate_uuid.py  validation_error_handler.py  websocket.py
cli/: README.md  build_cli.ps1  build_cli.sh  cli.py  get_release_version.sh  install_cli.ps1  install_cli.sh  pyproject.toml
cli/src/: credentials.py  exceptions.py  http.py  launch_all_agents.py  log.py  schemas.py  settings.py  utils.py
master-agent/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
master-agent/agents/: base.py  flow_master_agent.py  react_master_agent.py
master-agent/config/: settings.py
master-agent/connectors/: entities.py  exceptions.py  factory.py  managers.py
master-agent/llms/: __init__.py  custom.py  llms.py
master-agent/models/: enums.py  exceptions.py  requests.py  states.py
master-agent/prompts/: __init__.py  prompts.py
master-agent/utils/: agents.py  chat_history.py  common.py  tracing.py
router/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  settings.py
router/connectors/: ws_connector_manager.py
router/utils/: enums.py  pydantic_models.py
tests/: a2a_resources.py  conftest.py  constants.py  pyproject.toml  schemas.py  utils.py
tests/TestAPI/: test_agentflows_delete.py  test_agentflows_patch.py  test_agentflows_register_flow_post.py  test_agents_active_get.py  test_agents_agent_id_get.py  test_agents_agent_id_patch.py  test_agents_delete.py  test_agents_get.py  test_agents_register_post.py  test_files.py  test_users_login_access_token_post.py  test_users_register_post.py
tests/TestAgents/: test_agent_call_to_another_agent.py  test_agent_call_to_another_dead_agent.py  test_agent_call_when_agent_is_inactive.py  test_agent_files.py  test_agent_for_description_priority.py  test_agent_for_doc_string_description_schema.py  test_agent_for_error_handling.py  test_agent_for_name_description_schema.py  test_agent_input_output.py  test_agent_kill_during_request.py  test_agent_with_default_parameters_1.py  test_agent_with_default_parameters_2.py  test_agent_with_invalid_uuid.py  test_agent_with_required_params.py  test_agent_with_simultaneous_calls.py
tests/http_client/: AsyncHTTPClient.py
(+195 files in other folders)
