[project]
name = "genai-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.2.6",
    "aiofiles>=24.1.0",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.11.18",
    "aiosignal>=1.3.2",
    "annotated-types>=0.7.0",
    "asyncpg>=0.30.0",
    "attrs>=25.3.0",
    "faker>=37.1.0",
    "frozenlist>=1.6.0",
    "genai-protocol",
    "google-adk>=1.2.1",
    "google-genai>=1.19.0",
    "greenlet>=3.2.3",
    "gtts>=2.5.4",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mcp[cli]>=1.9.3",
    "multidict==6.4.3",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "propcache==0.3.1",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-html>=4.1.1",
    "python-docx>=1.1.2",
    "reportlab>=4.4.0",
    "sqlalchemy>=2.0.41",
    "typer>=0.15.3",
    "typing-inspection==0.4.0",
    "websockets==15.0.1",
    "xlsxwriter>=3.2.3",
    "yarl==1.20.0",
]

[tool.uv.workspace]
members = ["agents"]

[dependency-groups]
dev = [
    "pytest-xdist>=3.6.1",
]
